--- a/permuting_accuracy.tex
+++ b/permuting_accuracy.tex
@@ -313,12 +313,10 @@ In agreement with our simulation results, the location test (\emph{sd}) discover
 The former discovers TODO regions, while the latter only TODO, as reported in Figure~\ref{fig:read_data}.
 We emphasize that both test statistics were compared with the same permutation scheme, and the same error controls, so that any difference in detections is due to their different power.
 
+Having established that accuracy tests are underpowered both in simulation and in application, we wish to identify the conditions under which this will occur, and discuss implications on the practice of accuracy tests. 
 
 
-
-
-
-\begin{figure}[h]
+\begin{figure}[th]
 \centering
 %\includegraphics[width=0.7\linewidth]{}
 \missingfigure[figwidth=6cm]{TODO}
