--- a/permuting_accuracy.tex
+++ b/permuting_accuracy.tex
@@ -288,8 +288,10 @@ Having established that all of the tests in our battery control the false positi
 The results of \cite{ramdas_classification_2016} suggest that power should be of the same order. 
 On the other hand, the results of our previous sections suggest that the conservativeness of some of the considered tests can be considerable, rendering them underpowered. 
 
-As seen in Figure~\ref{fig:simulation_1}, the use of accuracy tests for signal detection is underpowered compared to a location tests. 
-A single simulation, however, can hardly support such a universal statement. 
+[TODO: discuss power of various tests]
+
+We see by now that the use of accuracy tests for signal detection is underpowered compared to location tests. 
+The above simulations can hardly support such a universal statement. 
 We will thus verify on a neuroimaging dataset, and discuss the causes for this phenomenon thus the scope of the statement.
 
 
@@ -324,7 +326,7 @@ Having established that accuracy tests are underpowered both in simulation and i
 Brain regions encoding information discriminating between vocal and non-vocal stimuli.
 Map reports the centres of $27$-voxel sized spherical regions, as discovered by an accuracy test (\emph{svm.cv.1}) and a location test (\emph{sd}). 
 Region-wise significance was determined using the permutation scheme of \cite{stelzer_statistical_2013}, followed by region-wise $FDR \leq 0.1$ control using the Benjamini-Hochberg procedure \citep{benjamini_controlling_1995}.
-Number of permutations equals ???. 
+Number of permutations equals TODO. 
   }
 \label{fig:read_data}
 \end{figure}
@@ -339,6 +341,8 @@ Number of permutations equals ???.
 %%%% Section %%%%
 \section{Discussion}
 \label{sec:discussion}
+
+
 
 % Not all problems are signal detection.
 % Implementation difficulty with discrete test statistics.
