--- a/permuting_accuracy.tex
+++ b/permuting_accuracy.tex
@@ -418,6 +418,34 @@ Algorithm~\ref{algo:statistic} computes a region-wise test statistic, which is c
 \end{algorithm}
 
 
+\section{More Simulations}
+
+
+\begin{figure}[h]
+\centering
+%\missingfigure[figwidth=6cm]{TODO}
+\label{fig:simulation_1}
+\caption{\footnotesize [TODO].}	
+
+	\begin{subfigure}{.5\textwidth}
+	  \centering
+	  \includegraphics[width=1\linewidth]{"art/2016-07-27 21:21:12"}
+	  \caption{2 Folds.}  %TODO
+	\label{fig:2016-07-2721:21:12}
+	\end{subfigure}%
+	\begin{subfigure}{.5\textwidth}
+	  \centering
+	  \missingfigure[figwidth=6cm]{TODO}
+%	  \includegraphics[width=1\linewidth]{"art/2016-07-27 11:42:05"}
+	  \caption{20 Folds.} %TODO
+%	\label{fig:2016-07-2721:21:12}
+	\end{subfigure}
+	
+\end{figure}
+
+
+
+
 
 
 
