--- a/permuting_accuracy.tex
+++ b/permuting_accuracy.tex
@@ -65,7 +65,8 @@ A common workflow in genetics or neuroimaging consists of fitting a classifier, 
 Given that the cross validated accuracy is a random quantity, it is then common to test if the cross validated accuracy is significantly better than chance using a permutation test.  
 Genetic examples include [TODO: elaborate]\cite{jiang_calculating_2008,radmacher_paradigm_2002-1}.
 Neuroscience examples include \emph{multivariate pattern analysis} (MVPA) \cite{kriegeskorte_information-based_2006,varoquaux_assessing_2016,golland_permutation_2003}.
-MVPA has become a very popular methodology, as the $956$ citations\footnote{Based on GoogleScholar. Accesses on 26.7.2016.} of \cite{kriegeskorte_information-based_2006} may attest.
+In both fields this method has become quite popular. 
+\cite{kriegeskorte_information-based_2006} has already gained $956$ citations\footnote{Based on GoogleScholar. Accesses on 26.7.2016.}, and \cite{radmacher_paradigm_2002-1} has been cited $274$ times.  
 
 
 To fix ideas, we will adhere to a Neuroscientific example: 
