--- a/permuting_accuracy.tex
+++ b/permuting_accuracy.tex
@@ -30,11 +30,14 @@
 \newcommand{\expect}[1]{\mathbf{E}\left[ #1 \right]} % The expectation operator
 \newcommand{\acc}{T^{acc}} 
 \newcommand{\dominant}{\hat{p}_{max}}
+\newcommand{\prob}[1]{P\left( #1 \right)} % the probability of an event
+
+
+
+
 
 
 \title{Better than chance classification for signal detection}
-
-
 
 
 \begin{document}
@@ -63,7 +66,7 @@
 
 A common workflow in genetics or neuroimaging consists of fitting a classifier, and estimating its predictive accuracy using cross validation. 
 Given that the cross validated accuracy is a random quantity, it is then common to test if the cross validated accuracy is significantly better than chance using a permutation test.  
-Genetic examples include [TODO: elaborate]\cite{jiang_calculating_2008,radmacher_paradigm_2002-1}.
+Genetic examples include \cite{jiang_calculating_2008,radmacher_paradigm_2002-1} [TODO: elaborate].
 Neuroscience examples include \emph{multivariate pattern analysis} (MVPA) \cite{kriegeskorte_information-based_2006,varoquaux_assessing_2016,golland_permutation_2003}.
 In both fields this method has become quite popular. 
 \cite{kriegeskorte_information-based_2006} has already gained $956$ citations\footnote{Based on GoogleScholar. Accesses on 26.7.2016.}, and \cite{radmacher_paradigm_2002-1} has been cited $274$ times.  
@@ -89,7 +92,7 @@ In particular, which test is to be preferred in finite samples?
 Our conclusion is quite simple: {\em location tests almost always have more power than accuracy tests}.
 
 The main argument for our statement rests upon the observation that with typical sample sizes, the accuracy test statistic is highly discrete. 
-Discrete test statistics are known to be conservative \citep{hemerik_exact_2014}, since they cannot exhaust the permissible false positive rate. 
+Discrete test statistics are known to be conservative \citep{hemerik_exact_2014-1}, since they cannot exhaust the permissible false positive rate. 
 In accuracy tests, the degree of discretization of the accuracy statistic is governed by the number of samples. 
 In our running neuroscience example \citep{gilron_quantifying_2016}, the classification is performed based on $40$ trials, so that the test statistic may assume only $40$ possible values. 
 This number of examples is not unusual if considering this is the number of subject in a genetic study, or the number of trial repeats in an fMRI brain scan. 
@@ -122,7 +125,7 @@ In our vocal/non-vocal example $p$ is governed by the number of voxels in a regi
 Given $n$ pairs of $(\features_i,\outcomes_i)$, typically assumed i.i.d., the \emph{testing} approach to localization amounts to testing whether $\features|\outcomes=1$ has the the same distribution as $\features|\outcomes=-1$.
 I.e., the multivariate voxel activation pattern has the same distribution when given a vocal stimulus, as when given a non-vocal stimulus. 
 The \emph{classification} approach to the localization problem amounts to learning a predictive model $\hypEstim(\features)$ from some assumed model class $\hypEstim \in \hypclass$. 
-The prediction accuracy, denoted $\acc_{\hypEstim}$, is defined as the probability of a given classifier $\hypEstim$ of making a correct prediction $\acc_{\hypEstim}:=\expect{\indicator{\hypEstim(x)=y}}$ when given a new, randomly drawn data point, ($\features,\outcomes$).
+The prediction accuracy, denoted $\acc_{\hypEstim}$, is defined as the probability of a given classifier $\hypEstim$ of making a correct prediction $\acc_{\hypEstim}:=\prob{\hypEstim(x)=y}$ when given a new, randomly drawn data point, ($\features,\outcomes$).
 
 
 
@@ -159,7 +162,7 @@ We will thus be considering both cross validated accuracies, and train accuracie
 
 
 \paragraph{Refolding?}
-The standard practice in neuroimaging is to refold the data after each permutation [TODO:ref].
+The standard practice in neuroimaging is to refold the data after each permutation.
 This is imperative if permuting labels while aiming at balanced data folds. 
 This is not, however, imperative in general. 
 In this work, we will adhere to the standard practice of refolding the data within each permutation.
@@ -175,7 +178,7 @@ We thus adhere to the more common, albeit less efficient practice, of permuting 
 
 
 \paragraph{Balanced folding?}
-The standard practice when cross validating is to constrain the data folds to be balanced (i.e. stratified)[TODO: ref].
+A standard practice when cross validating is to constrain the data folds to be balanced (i.e. stratified).
 This is well justified when aiming at unbiased accuracy estimation. 
 This also simplifies matter when aiming at signal detection, as can be seen from the above discussion of the appropriate test statistic. 
 Then again, it may complicate matters, as can be seen from the above discussion on label versus feature permutation. 
