--- a/permuting_accuracy.tex
+++ b/permuting_accuracy.tex
@@ -257,7 +257,6 @@ In particular:
 
 \begin{figure}[h]
 \centering
-%\missingfigure[figwidth=6cm]{TODO}
 \label{fig:simulation_1}
 \caption{\footnotesize
 The power of a permutation test with various test statistics. 
@@ -269,13 +268,13 @@ Simulation code available at [TODO].}
 	\begin{subfigure}{.5\textwidth}
 	  \centering
 	  \includegraphics[width=1\linewidth]{"art/2016-07-26 20:55:48"}
-	  \caption{Unbalanced}  %TODO
+	  \caption{Unbalanced.}  %TODO
 	\label{fig:simulation_11}
 	\end{subfigure}%
 	\begin{subfigure}{.5\textwidth}
 	  \centering
 	  \includegraphics[width=1\linewidth]{"art/2016-07-27 11:42:05"}
-	  \caption{Balanced} %TODO
+	  \caption{Balanced.} %TODO
 	\label{fig:simulation_12}
 	\end{subfigure}
 	
@@ -325,7 +324,6 @@ Having established that accuracy tests are underpowered both in simulation and i
 \begin{figure}[th]
 \centering
 \includegraphics[width=0.7\linewidth]{"art/svm_vs_SD"}
-%\missingfigure[figwidth=6cm]{TODO}
 \caption{\footnotesize
 Brain regions encoding information discriminating between vocal and non-vocal stimuli.
 Map reports the centres of $27$-voxel sized spherical regions, as discovered by an accuracy test (\emph{svm.cv.1}), and a location test (\emph{sd}). 
@@ -383,7 +381,8 @@ Were they to start by asking if classes are any different, and only then try to 
 
 
 %\begin{acknowledgments}
-%TODO
+%TODO: 
+% isf 900/60, Jelle, Jesse B.A. Hemerik, Yakir Brechenko, Omer Shamir
 %\end{acknowledgments}
 
 
