--- a/permuting_accuracy.tex
+++ b/permuting_accuracy.tex
@@ -451,10 +451,8 @@ Algorithm~\ref{algo:statistic} computes a region-wise test statistic, which is c
 
 \begin{figure}[h]
 \centering
-%\missingfigure[figwidth=6cm]{TODO}
 \label{fig:simulation_1}
 \caption{\footnotesize [TODO].}	
-
 	\begin{subfigure}{.5\textwidth}
 	  \centering
 	  \includegraphics[width=1\linewidth]{"art/2016-07-27 21:21:12"}
@@ -463,15 +461,77 @@ Algorithm~\ref{algo:statistic} computes a region-wise test statistic, which is c
 	\end{subfigure}%
 	\begin{subfigure}{.5\textwidth}
 	  \centering
-	  \missingfigure[figwidth=6cm]{TODO}
+	  \missingfigure[figwidth=6cm]{...}
 %	  \includegraphics[width=1\linewidth]{"art/2016-07-27 11:42:05"}
 	  \caption{20 Folds.} %TODO
 %	\label{fig:2016-07-2721:21:12}
 	\end{subfigure}
-	
 \end{figure}
 
 
+\begin{figure}[h]
+\centering
+%\label{fig:simulation_1}
+\caption{\footnotesize [TODO].}	
+	\begin{subfigure}{.5\textwidth}
+	  \centering
+  	  \missingfigure[figwidth=6cm]{...}
+%	  \includegraphics[width=1\linewidth]{"art/2016-07-27 21:21:12"}
+	  \caption{Scale Change.}  %TODO
+%	\label{fig:2016-07-2721:21:12}
+	\end{subfigure}%
+	\begin{subfigure}{.5\textwidth}
+	  \centering
+	  \missingfigure[figwidth=6cm]{...}
+%	  \includegraphics[width=1\linewidth]{"art/2016-07-27 11:42:05"}
+	  \caption{t Null} %TODO
+%	\label{fig:2016-07-2721:21:12}
+	\end{subfigure}
+\end{figure}
+
+
+
+\begin{figure}[h]
+\centering
+%\label{fig:simulation_1}
+\caption{\footnotesize [TODO].}	
+	\begin{subfigure}{.5\textwidth}
+	  \centering
+  	  \missingfigure[figwidth=6cm]{...}
+%	  \includegraphics[width=1\linewidth]{"art/2016-07-27 21:21:12"}
+	  \caption{Compound symmetry}  %TODO
+%	\label{fig:2016-07-2721:21:12}
+	\end{subfigure}%
+	\begin{subfigure}{.5\textwidth}
+	  \centering
+	  \missingfigure[figwidth=6cm]{...}
+%	  \includegraphics[width=1\linewidth]{"art/2016-07-27 11:42:05"}
+	  \caption{AR(1)} %TODO
+%	\label{fig:2016-07-2721:21:12}
+	\end{subfigure}
+\end{figure}
+
+
+
+\begin{figure}[h]
+\centering
+%\label{fig:simulation_1}
+\caption{\footnotesize [TODO].}	
+	\begin{subfigure}{.5\textwidth}
+	  \centering
+  	  \missingfigure[figwidth=6cm]{...}
+%	  \includegraphics[width=1\linewidth]{"art/2016-07-27 21:21:12"}
+	  \caption{n=400}  %TODO
+%	\label{fig:2016-07-2721:21:12}
+	\end{subfigure}%
+	\begin{subfigure}{.5\textwidth}
+	  \centering
+	  \missingfigure[figwidth=6cm]{...}
+%	  \includegraphics[width=1\linewidth]{"art/2016-07-27 11:42:05"}
+	  \caption{?} %TODO
+%	\label{fig:2016-07-2721:21:12}
+	\end{subfigure}
+\end{figure}
 
 
 
