--- a/permuting_accuracy.tex
+++ b/permuting_accuracy.tex
@@ -10,6 +10,7 @@
 \usepackage[boxruled,vlined,linesnumbered]{algorithm2e}
 \usepackage{caption}
 \usepackage{subcaption}
+\usepackage{lineno}
 
 
 \author{Jonathan Rosenblatt \and Roee Gilron \and Roy Mukamel}
@@ -49,6 +50,7 @@
 
 
 \maketitle
+\linenumbers
 
 \begin{abstract}
 [TODO]
