--- a/permuting_accuracy.tex
+++ b/permuting_accuracy.tex
@@ -38,7 +38,7 @@
 
 
 
-\title{Better than chance classification for signal detection}
+\title{Better-than-chance classification for signal detection}
 
 
 \begin{document}
@@ -69,7 +69,7 @@
 A common workflow in genetics or neuroimaging consists of fitting a classifier, and estimating its predictive accuracy using cross validation. 
 Given that the cross validated accuracy is a random quantity, it is then common to test if the cross validated accuracy is significantly better than chance using a permutation test.  
 Genetic examples include \cite{jiang_calculating_2008,radmacher_paradigm_2002-1} [TODO: elaborate].
-Neuroscience examples include \emph{multivariate pattern analysis} (MVPA) \cite{kriegeskorte_information-based_2006,varoquaux_assessing_2016,golland_permutation_2003}.
+Neuroscience examples include the very popular \emph{multivariate pattern analysis} (MVPA) \citep{kriegeskorte_information-based_2006,varoquaux_assessing_2016,golland_permutation_2003}.
 In both fields this method has become quite popular. 
 \cite{kriegeskorte_information-based_2006} has already gained $956$ citations\footnote{Based on GoogleScholar. Accesses on 26.7.2016.}, and \cite{radmacher_paradigm_2002-1} has been cited $274$ times.  
 
