--- a/permuting_accuracy.tex
+++ b/permuting_accuracy.tex
@@ -70,8 +70,7 @@ A common workflow in genetics or neuroimaging consists of fitting a classifier, 
 Given that the cross validated accuracy is a random quantity, it is then common to test if the cross validated accuracy is significantly better than chance using a permutation test.  
 Genetic examples include \cite{jiang_calculating_2008,radmacher_paradigm_2002-1} [TODO: elaborate].
 Neuroscience examples include the very popular \emph{multivariate pattern analysis} (MVPA) \citep{kriegeskorte_information-based_2006,varoquaux_assessing_2016,golland_permutation_2003}.
-In both fields this method has become quite popular. 
-\cite{kriegeskorte_information-based_2006} has already gained $956$ citations\footnote{Based on GoogleScholar. Accesses on 26.7.2016.}, and \cite{radmacher_paradigm_2002-1} has been cited $274$ times.  
+The number of citations\footnote{Based on GoogleScholar. Accesses on 26.7.2016.} attests to the popularity of the above workflow: =$956$ for \cite{kriegeskorte_information-based_2006}, and $274$ for \cite{radmacher_paradigm_2002-1}, as examples. 
 
 
 To fix ideas, we will adhere to a Neuroscientific example: 
