--- a/Permuting_Accuracy.bib
+++ b/Permuting_Accuracy.bib
@@ -418,7 +418,7 @@ TECHNOMETRICS "[This] is a vast and complex book. Generally, it concentrates on 
   file = {Southworth et al_2009_Properties of Balanced Permutations.pdf:/home/johnros/.zotero/zotero/66g0wvis.default/zotero/storage/RB2PIUV5/Southworth et al_2009_Properties of Balanced Permutations.pdf:application/pdf;Snapshot:/home/johnros/.zotero/zotero/66g0wvis.default/zotero/storage/FFPEPRUF/cmb.2008.html:text/html}
 }
 
-@article{radmacher_paradigm_2002-1,
+@article{radmacher_paradigm_2002,
   title = {A {{Paradigm}} for {{Class Prediction Using Gene Expression Profiles}}},
   volume = {9},
   issn = {1066-5277},
@@ -495,6 +495,65 @@ TECHNOMETRICS "[This] is a vast and complex book. Generally, it concentrates on 
   year = {2014},
   keywords = {62G09,Mathematics - Statistics Theory},
   file = {Hemerik_Goeman_2014_Exact testing with random permutations.pdf:/home/johnros/.zotero/zotero/66g0wvis.default/zotero/storage/DK287DKI/Hemerik_Goeman_2014_Exact testing with random permutations.pdf:application/pdf;arXiv.org Snapshot:/home/johnros/.zotero/zotero/66g0wvis.default/zotero/storage/GKQ23FZS/1411.html:text/html}
+}
+
+@article{pereira_machine_2009,
+  series = {Mathematics in Brain Imaging},
+  title = {Machine learning classifiers and {{fMRI}}: {{A}} tutorial overview},
+  volume = {45},
+  issn = {1053-8119},
+  shorttitle = {Machine learning classifiers and {{fMRI}}},
+  doi = {10.1016/j.neuroimage.2008.11.007},
+  abstract = {Interpreting brain image experiments requires analysis of complex, multivariate data. In recent years, one analysis approach that has grown in popularity is the use of machine learning algorithms to train classifiers to decode stimuli, mental states, behaviours and other variables of interest from fMRI data and thereby show the data contain information about them. In this tutorial overview we review some of the key choices faced in using this approach as well as how to derive statistically significant results, illustrating each point from a case study. Furthermore, we show how, in addition to answering the question of `is there information about a variable of interest' (pattern discrimination), classifiers can be used to tackle other classes of question, namely `where is the information' (pattern localization) and `how is that information encoded' (pattern characterization).},
+  timestamp = {2016-07-28T05:45:34Z},
+  number = {1, Supplement 1},
+  urldate = {2016-07-28},
+  journal = {NeuroImage},
+  author = {Pereira, Francisco and Mitchell, Tom and Botvinick, Matthew},
+  month = mar,
+  year = {2009},
+  pages = {S199--S209},
+  file = {Pereira et al_2009_Machine learning classifiers and fMRI.pdf:/home/johnros/.zotero/zotero/66g0wvis.default/zotero/storage/BNQ4Z2SM/Pereira et al_2009_Machine learning classifiers and fMRI.pdf:application/pdf;ScienceDirect Snapshot:/home/johnros/.zotero/zotero/66g0wvis.default/zotero/storage/SIQXCRCC/S1053811908012263.html:text/html}
+}
+
+@incollection{olivetti_induction_2012,
+  series = {Lecture Notes in Computer Science},
+  title = {Induction in {{Neuroscience}} with {{Classification}}: {{Issues}} and {{Solutions}}},
+  copyright = {\textcopyright{}2012 Springer-Verlag Berlin Heidelberg},
+  isbn = {978-3-642-34712-2 978-3-642-34713-9},
+  shorttitle = {Induction in {{Neuroscience}} with {{Classification}}},
+  abstract = {Machine learning and pattern recognition techniques are increasingly adopted in neuroimaging-based neuroscience research. In many applications a classifier is trained on brain data in order to predict a variable of interest. Two leading examples are brain decoding and clinical diagnosis. Brain decoding consists of predicting stimuli or mental states from concurrent functional brain data. In clinical diagnosis it is the presence or absence of a given medical condition that is predicted from brain data. Observing accurate classification is considered to support the hypothesis of variable-related information within brain data. In this work we briefly review the literature on statistical tests for this kind of hypothesis testing problem. We claim that the current approaches to this hypothesis testing problem are suboptimal, do not cover all useful settings, and that they could lead to wrong conclusions. We present a more accurate statistical test and provide examples of its superiority.},
+  language = {en},
+  timestamp = {2016-07-28T05:46:50Z},
+  number = {7263},
+  urldate = {2016-07-28},
+  booktitle = {Machine {{Learning}} and {{Interpretation}} in {{Neuroimaging}}},
+  publisher = {{Springer Berlin Heidelberg}},
+  author = {Olivetti, Emanuele and Greiner, Susanne and Avesani, Paolo},
+  editor = {Langs, Georg and Rish, Irina and Grosse-Wentrup, Moritz and Murphy, Brian},
+  year = {2012},
+  keywords = {Computer Applications,Computer Imaging; Vision; Pattern Recognition and Graphics,Data Mining and Knowledge Discovery,Image Processing and Computer Vision,pattern recognition,Probability and Statistics in Computer Science},
+  pages = {42--50},
+  file = {Olivetti et al_2012_Induction in Neuroscience with Classification.pdf:/home/johnros/.zotero/zotero/66g0wvis.default/zotero/storage/DNCZRCNJ/Olivetti et al_2012_Induction in Neuroscience with Classification.pdf:application/pdf;Snapshot:/home/johnros/.zotero/zotero/66g0wvis.default/zotero/storage/TF8AQ2N9/978-3-642-34713-9_6.html:text/html},
+  doi = {10.1007/978-3-642-34713-9_6}
+}
+
+@article{simon_pitfalls_2003,
+  title = {Pitfalls in the {{Use}} of {{DNA Microarray Data}} for {{Diagnostic}} and {{Prognostic Classification}}},
+  volume = {95},
+  issn = {0027-8874, 1460-2105},
+  doi = {10.1093/jnci/95.1.14},
+  language = {en},
+  timestamp = {2016-07-28T06:02:48Z},
+  number = {1},
+  urldate = {2016-07-28},
+  journal = {Journal of the National Cancer Institute},
+  author = {Simon, Richard and Radmacher, Michael D. and Dobbin, Kevin and McShane, Lisa M.},
+  month = jan,
+  year = {2003},
+  pages = {14--18},
+  file = {Simon et al_2003_Pitfalls in the Use of DNA Microarray Data for Diagnostic and Prognostic.pdf:/home/johnros/.zotero/zotero/66g0wvis.default/zotero/storage/S2N3HXB2/Simon et al_2003_Pitfalls in the Use of DNA Microarray Data for Diagnostic and Prognostic.pdf:application/pdf;Snapshot:/home/johnros/.zotero/zotero/66g0wvis.default/zotero/storage/TPKZHDS4/14.html:text/html},
+  pmid = {12509396}
 }
 
 
