--- a/permuting_accuracy.tex
+++ b/permuting_accuracy.tex
@@ -80,7 +80,7 @@ We call this an \emph{accuracy test}, a.k.a. \emph{class prediction} in \cite{si
 
 This same signal detection task can be also approached as a two-group multivariate test:
 Inferring that a region encodes vocal/non-vocal information, is essentially inferring that the spatial distribution of brain activations is different given a vocal/non-vocal stimulus. 
-A practitioner may then call upon a two-group location test such as Hotelling's $T^2$ \cite{fujikoshi_multivariate_2011}.
+A practitioner may then call upon a two-group location test such as Hotelling's $T^2$ \citep{fujikoshi_multivariate_2011}.
 Alternatively, if the size of the brain region is too large compared to the number of observations, so that the spatial covariance cannot be fully estimated, then a high dimensional version of Hotelling's test can be called upon, such as in \cite{srivastava_testing_2013} or \cite{schafer_shrinkage_2005}.
 In contrast to \emph{accuracy tests}, we call these \emph{location tests}, a.k.a. \emph{class comparison} in \cite{simon_pitfalls_2003}.
 
@@ -292,7 +292,7 @@ Having established that all of the tests in our battery control the false positi
 The results of \cite{ramdas_classification_2016} suggest that power should be of the same order. 
 On the other hand, the results of our previous sections suggest that the conservativeness of some of the considered tests can be considerable, rendering them underpowered. 
 
-[TODO: discuss power of various tests]
+[TODO: discuss power of various tests after finishing simulations]
 
 We see by now that the use of accuracy tests for signal detection is underpowered compared to location tests. 
 The above simulations can hardly support such a universal statement. 
@@ -460,7 +460,7 @@ Algorithm~\ref{algo:statistic} computes a region-wise test statistic, which is c
 
 \begin{figure}[h]
 \centering
-\label{fig:simulation_1}
+%\label{fig:simulation_1}
 \caption{\footnotesize [TODO].}	
 	\begin{subfigure}{.5\textwidth}
 	  \centering
