added Roees results

--- a/permuting_accuracy.tex
+++ b/permuting_accuracy.tex
@@ -316,7 +316,7 @@ For completeness, the pipeline is described in Appendix~\ref{apx:analysis}.
 To demonstrate our point, we compare the \emph{sd} location test with the \emph{svm.cv.1} accuracy test (see Table~\ref{tab:collected} for the definition of these statistics). 
 
 In agreement with our simulation results, the location test (\emph{sd}) discovers more brain regions that encode information discriminating between vocal and non-vocal stimuli when compared to an accuracy test (\emph{svm.cv.1}).
-The former discovers $1,232$ regions, while the latter only $441$, as reported in Figure~\ref{fig:read_data}.
+The former discovers $1,232$ regions, while the latter only $441$, $399$ of which are common to both as reported in Figure~\ref{fig:read_data}.
 We emphasize that both test statistics were compared with the same permutation scheme, and the same error controls, so that any difference in detections is due to their different power.
 
 Having established that accuracy tests are underpowered both in simulation and in application, we wish to identify the conditions under which this will occur, and discuss implications on the practice of accuracy tests. 
