added Roees results

--- a/Permuting_Accuracy.bib
+++ b/Permuting_Accuracy.bib
@@ -470,4 +470,25 @@ TECHNOMETRICS "[This] is a vast and complex book. Generally, it concentrates on 
   pmid = {12509396}
 }
 
+@article{fu_estimating_2005,
+  title = {Estimating misclassification error with small samples via bootstrap cross-validation},
+  volume = {21},
+  issn = {1367-4803, 1460-2059},
+  doi = {10.1093/bioinformatics/bti294},
+  abstract = {Motivation: Estimation of misclassification error has received increasing attention in clinical diagnosis and bioinformatics studies, especially in small sample studies with microarray data. Current error estimation methods are not satisfactory because they either have large variability (such as leave-one-out cross-validation) or large bias (such as resubstitution and leave-one-out bootstrap). While small sample size remains one of the key features of costly clinical investigations or of microarray studies that have limited resources in funding, time and tissue materials, accurate and easy-to-implement error estimation methods for small samples are desirable and will be beneficial.
+Results: A bootstrap cross-validation method is studied. It achieves accurate error estimation through a simple procedure with bootstrap resampling and only costs computer CPU time. Simulation studies and applications to microarray data demonstrate that it performs consistently better than its competitors. This method possesses several attractive properties: (1) it is implemented through a simple procedure; (2) it performs well for small samples with sample size, as small as 16; (3) it is not restricted to any particular classification rules and thus applies to many parametric or non-parametric methods.
+Contact: wfu@stat.tamu.edu},
+  language = {en},
+  timestamp = {2016-07-28T10:16:50Z},
+  number = {9},
+  urldate = {2016-07-28},
+  journal = {Bioinformatics},
+  author = {Fu, Wenjiang J. and Carroll, Raymond J. and Wang, Suojin},
+  month = jan,
+  year = {2005},
+  pages = {1979--1986},
+  file = {Fu et al_2005_Estimating misclassification error with small samples via bootstrap.pdf:/home/johnros/.zotero/zotero/66g0wvis.default/zotero/storage/32HCSCVH/Fu et al_2005_Estimating misclassification error with small samples via bootstrap.pdf:application/pdf;Snapshot:/home/johnros/.zotero/zotero/66g0wvis.default/zotero/storage/AUPFQ73E/1979.html:text/html},
+  pmid = {15691862}
+}
+
 
