--- a/permuting_accuracy.tex
+++ b/permuting_accuracy.tex
@@ -470,7 +470,7 @@ Algorithm~\ref{algo:statistic} computes a region-wise test statistic, which is c
 	\end{subfigure}%
 	\begin{subfigure}{.5\textwidth}
 	  \centering
-	  \missingfigure[figwidth=6cm]{...}
+	  \missingfigure[figwidth=6cm]{TODO}
 %	  \includegraphics[width=1\linewidth]{"art/2016-07-27 11:42:05"}
 	  \caption{20 Folds.} %TODO
 %	\label{fig:2016-07-2721:21:12}
@@ -484,14 +484,14 @@ Algorithm~\ref{algo:statistic} computes a region-wise test statistic, which is c
 \caption{\footnotesize [TODO].}	
 	\begin{subfigure}{.5\textwidth}
 	  \centering
-  	  \missingfigure[figwidth=6cm]{...}
+  	  \missingfigure[figwidth=6cm]{TODO}
 %	  \includegraphics[width=1\linewidth]{"art/2016-07-27 21:21:12"}
 	  \caption{Scale Change.}  %TODO
 %	\label{fig:2016-07-2721:21:12}
 	\end{subfigure}%
 	\begin{subfigure}{.5\textwidth}
 	  \centering
-	  \missingfigure[figwidth=6cm]{...}
+	  \missingfigure[figwidth=6cm]{TODO}
 %	  \includegraphics[width=1\linewidth]{"art/2016-07-27 11:42:05"}
 	  \caption{t Null} %TODO
 %	\label{fig:2016-07-2721:21:12}
@@ -506,14 +506,14 @@ Algorithm~\ref{algo:statistic} computes a region-wise test statistic, which is c
 \caption{\footnotesize [TODO].}	
 	\begin{subfigure}{.5\textwidth}
 	  \centering
-  	  \missingfigure[figwidth=6cm]{...}
+  	  \missingfigure[figwidth=6cm]{TODO}
 %	  \includegraphics[width=1\linewidth]{"art/2016-07-27 21:21:12"}
-	  \caption{Compound symmetry}  %TODO
+	  \caption{Compound symmetry}  
 %	\label{fig:2016-07-2721:21:12}
 	\end{subfigure}%
 	\begin{subfigure}{.5\textwidth}
 	  \centering
-	  \missingfigure[figwidth=6cm]{...}
+	  \missingfigure[figwidth=6cm]{TODO}
 %	  \includegraphics[width=1\linewidth]{"art/2016-07-27 11:42:05"}
 	  \caption{AR(1)} %TODO
 %	\label{fig:2016-07-2721:21:12}
@@ -528,14 +528,14 @@ Algorithm~\ref{algo:statistic} computes a region-wise test statistic, which is c
 \caption{\footnotesize [TODO].}	
 	\begin{subfigure}{.5\textwidth}
 	  \centering
-  	  \missingfigure[figwidth=6cm]{...}
+  	  \missingfigure[figwidth=6cm]{TODO}
 %	  \includegraphics[width=1\linewidth]{"art/2016-07-27 21:21:12"}
 	  \caption{n=400}  %TODO
 %	\label{fig:2016-07-2721:21:12}
 	\end{subfigure}%
 	\begin{subfigure}{.5\textwidth}
 	  \centering
-	  \missingfigure[figwidth=6cm]{...}
+	  \missingfigure[figwidth=6cm]{TODO}
 %	  \includegraphics[width=1\linewidth]{"art/2016-07-27 11:42:05"}
 	  \caption{?} %TODO
 %	\label{fig:2016-07-2721:21:12}
